@startuml NIC_Classes

' Class definitions
' # means private
class "NIC<Engine>" {
}

class "Conditionally_Data_Observed<T, Condition>" {
}

class "Conditional_Data_Observer<T, Condition>" {
}


class "Buffer<T>" {
}

' Relationships
Ethernet <|-- "NIC<Engine>"
"Conditionally_Data_Observed<T, Condition>" <|-- "NIC<Engine>"
Engine <|.. "NIC<Engine>" : private
"Buffer<T>" <.. "NIC<Engine>" : <<uses>>
"Conditionally_Data_Observed<T, Condition>" <--> "Conditional_Data_Observer<T, Condition>" : observer pattern
Initializer ..> "NIC<Engine>" : <<friend>>

note top of "NIC<Engine>"
  Represents a Network Interface Card
  that manages network communication
end note

@enduml 